<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GMaps Zombie Smasher</string>

    <!-- Main Menu -->
    <string name="play">Play</string>
    <string name="resume">Resume</string>
    <string name="level">Manage Levels</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="select_world_in_map">Select world in map</string>
    <string name="gps_utilities">GPS utilities</string>
    <string name="edit_world_in_map">Edit world in map</string>
    <string name="internet_connection">You need an Internet connection to play this game.
          "Please, enable your internet connection</string>

    <!-- SD CARD -->
    <string name="welcome_dialog_sdcard_error">SD CARD Error</string>
    <string name="welcome_dialog_sdcard_ok">SD CARD Ok</string>

    <!-- Play -->
    <string name="play_here">Play Here</string>
    <string name="new_world">Create a New World</string>

    <!-- Game -->
    <string name="game">Game</string>
    <string name="you_win">You Win !</string>
    <string name="you_win_button">F%$k Yea !</string>
    <string name="you_loose">You Loose !</string>
    <string name="you_loose_button">Okay :(</string>
    <string name="unable_current_location">Unable to get your current location</string>
    <string name="api_key">0qsMDe7mnD95CtN61ynjw1eFzOBpyrqDRfvDJmQ</string>

    <!-- Manage Levels -->
    <string name="select_world">Select World In Map</string>
    <string name="manage_levels">Manage Levels</string>
    <string name="delete_world">Delete Selected World</string>
    <string name="new_world_name">Enter a new Name:</string>
    <string name="get_current_position">Get Current Position</string>
    <string name="set_zoom_min">Get Zoom Min</string>
    <string name="set_zoom_max">Get Zoom Max</string>
    <string name="select_world_here">New World Here</string>
    <string name="edit_ok">Validate World Edition</string>
    <string name="edit_cancel">Cancel World Edition</string>
    <string name="no_changes">No changes done!</string>
    <string name="changes">World updated!</string>

    <!-- GPS -->
    <string name="wait">Loading. Please wait...</string>
    <string name="receiving">Retrieving GPS data ...</string>
    <string name="enable_gps_question">Your GPS is disabled! Would you like to enable it?</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="disable_gps">Do nothing</string>

    <!-- Result Pop-Up -->
    <string name="played_time">Played Time</string>
    <string name="citizens_saved">Citizens Saved</string>
    <string name="citizens_killed">Citizens Killed by Bomb</string>
    <string name="zombies_killed">Zombies Killed by Bomb</string>
    <string name="citizens_eated">Citizens eated by Zombies</string>

    <!-- Settings -->
    <string name="music_on">Zombie: Did I scare you?</string>
    <string name="music_off">Silence hill</string>
    <string name="background_music">Background music</string>
    <string name="sound_off">Sound off</string>
    <string name="sound_on">Sound on</string>
    <string name="sound">Sound</string>
    <string name="satellite_mode">View the maps in satellite mode</string>
    <string name="satellite">Satellite</string>
    <string name="difficulty_level">Define the difficulty level</string>
    <string name="difficulty">Difficulty Level</string>

    <!-- Help -->
    <string name="help">Help</string>
    <string name="help_intro">This little help will show you the aim of the game</string>
    <string name="help_citizen">This is a citizen: you have to save him!</string>
    <string name="help_zombie">This is a zombie: they will eat the citizen and transform them into zombies</string>
    <string name="help_chopper">By hitting this button, you select the chopper. You can place it on the map to save the citizen of a certainly death.</string>
    <string name="help_bomb">By hitting this button, you select the bombs. You can place-it on the map to kill the zombies. Be careful, bombs also kills citizens.</string>
    <string name="help_rules">The aim of the game is to save most citizen as possible. 
        \n You have a chopper and bombs to help you.
        \n After use a item, this one will be unavailable during a few seconds.
        \n The game ends when all citizens are saved or all the zombies/citizens are killed.
        \n To win, you have to save at least, half of the citizens at the begining of the game.</string>
        
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="pick_option">Pick an option</string>

</resources>