<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/settings_background" >

    <PreferenceCategory android:title="Game settings" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="check_backgroundMusic"
            android:summaryOff="@string/music_off"
            android:summaryOn="@string/music_on"
            android:title="@string/background_music" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="check_sound"
            android:summaryOff="@string/sound_off"
            android:summaryOn="@string/sound_on"
            android:title="@string/sound" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_satellite"
            android:summary="@string/satellite_mode"
            android:title="@string/satellite" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/dificultyLevel"
            android:entryValues="@array/dificultyLevelValues"
            android:key="level"
            android:summary="@string/difficulty_level"
            android:title="@string/difficulty" />
    </PreferenceCategory>

</PreferenceScreen>