<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/gmapzombiesmasher">

    <LinearLayout
        android:id="@+id/main_linearLayout"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        

        <Button
            android:id="@+id/play"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="200sp"
            android:layout_height="60sp"
            android:text="@string/play" />
        <Button
            android:id="@+id/level"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="200sp"
            android:layout_height="60sp"
            android:text="@string/level" />
        <Button
            android:id="@+id/achievements"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="200sp"
            android:layout_height="60sp"
            android:text="@string/achievements" />
        <Button
            android:id="@+id/settings"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="200sp"
            android:layout_height="60sp"
            android:text="@string/settings" />

    </LinearLayout>

</LinearLayout>

