<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
    <ImageView android:id="@+id/played_time_img"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/btn_helicopter"/>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
      <TextView android:id="@+id/played_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/played_time"/>
      <TextView android:id="@+id/played_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
  </LinearLayout>
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
    <ImageView android:id="@+id/citizens_saved_img"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/btn_helicopter"/>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
      <TextView android:id="@+id/citizens_saved_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/citizens_saved"/>
      <TextView android:id="@+id/citizens_saved_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
  </LinearLayout>
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
    <ImageView android:id="@+id/zombies_killed_img"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/btn_helicopter"/>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
      <TextView android:id="@+id/zombies_killed_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/zombies_killed"/>
      <TextView android:id="@+id/zombies_killed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>

